# bookcast-studio

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: BOOKCAST_RUST_MIGRATION_HANDOFF.md  MILESTONES.md  UX_WORKBENCH_PLAN.md
rust/bookcast-rust/: Cargo.toml
rust/bookcast-rust/src/: main.rs
scripts/: acceptance_smoke.py  beta_readiness_report.ps1  build_windows.ps1  readiness_check.ps1  start_manual_test.ps1  ui_launch_smoke.ps1
src/bookcast/: __init__.py  assembler.py  bridge.py  calibre.py  characters.py  cli.py  db.py  importers.py  library.py  llm.py  models.py  podcast.py  text_pipeline.py  tts.py  ui.py
tests/: test_assembler.py  test_bridge_cli.py  test_calibre.py  test_importers.py  test_library_cli.py  test_llm_features.py  test_text_pipeline.py  test_tts.py
